Clicking a link to a download file served by a service-worker with a fetch event handler yields "Frame load interrupted" error https://bugs.webkit.org/show_bug.cgi?id=247793 rdar://problem/102296700

Web Inspector shows the "Frame load interrupted" error based on the sub resource load failing error.
Mark the error type as Cancellation so that Web Inspector does not show this message.

Reviewed by Alex Christensen.

* Source/WebCore/loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::interruptedForPolicyChangeError const):
(WebCore::DocumentLoader::stopLoadingForPolicyChange):

Canonical link: https://commits.webkit.org/256725@main